@@ -1,11 +1,13 @@
 use strict;
 use warnings;
+
 package DZ1;
 # ABSTRACT: this is a sample package for testing Dist::Zilla;
-# VERSION
+
+our $VERSION = '1.234';
 
 sub main {
-  return 1;
+    return 1;
 }
 
 1;
